fixed spacing of linkedin icon at top of page

--- a/MySiteStyle.css
+++ b/MySiteStyle.css
@@ -82,7 +82,7 @@ p
     width: auto;
     height: auto;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: center;
     margin: 5px;
     padding-right: 40px;
     padding-top: 10px;
